cc: Remove DelegatingRenderer.

Inline the tiny code left there into LayerTreeHostImpl, delete the
|renderer_| member and change references to the |output_surface_|
instead.

R=enne
BUG=641613
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_precise_blink_rel

Review-Url: https://codereview.chromium.org/2323583002
Cr-Commit-Position: refs/heads/master@{#417150}

Former-commit-id: bd23d696d66885e88e53dd5f9b8ff6d0549d6ad7